# chainsaw

./: .gitignore  Cargo.toml  README.md
.github/workflows/: dep-graph.yml  test.yml
arena/src/: lib.rs
ast/: Cargo.toml
ast/src/: lib.rs  validation.rs
cli/: Cargo.toml
cli/src/: main.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: main.rs  parse_lower.rs
hir/: Cargo.toml
hir/src/: database.rs  lib.rs
lexer/: Cargo.toml
lexer/src/: lib.rs  token_kind.rs
monke-cli/: Cargo.toml
monke-cli/src/: main.rs
monke-lib/: Cargo.toml
monke-lib/src/: lexer.rs  lib.rs  parser.rs  syntax.rs
monke-lib/src/parser/: event.rs  expr.rs  marker.rs  mod.rs  sink.rs  source.rs
monke_cli/: Cargo.toml
monke_cli/src/: main.rs
monke_lib/: Cargo.toml
monke_lib/src/: lib.rs  parser.rs
parser/: Cargo.toml
parser/src/: event.rs  expr.rs  lib.rs  marker.rs  parser.rs  sink.rs  source.rs
parser/src/grammar/: expr.rs  mod.rs  stmt.rs
parser/src/parser/: marker.rs  mod.rs  parse_error.rs
src/: binding_def.rs  binding_usage.rs  bindings.rs  env.rs  environment.rs  expr.rs  lib.rs  stmt.rs  utils.rs  values.rs
src/expr/: binding_usage.rs  block.rs
syntax/: Cargo.toml
syntax/src/: lib.rs
