[package]
name = "hir"
version = "0.0.0-alpha"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smol_str = "0.1.17"
la-arena = "0.2.0"
syntax = {path = "../syntax"}
ast = {path = "../ast"}

[dev-dependencies]
parser = {path = "../parser"}
