[package]
name = "parser"
version = "0.0.0-alpha"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lexer = {path = "../lexer"}
syntax = {path = "../syntax"}
drop_bomb = "0.1.5"
rowan = "0.10.0"
text-size = "1.0.0"

[dev-dependencies]
expect-test = "1.0.1"
